# clips-auto-sender

./: README.md  User_Settings.json  main.py  pyproject.toml  upload.py  utils.py
