[tool.poetry]
name = "clips-auto-sender"
version = "0.1.0"
description = ""
authors = ["va1ker"]
readme = "README.md"
packages = [{include = "clips_auto_sender"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
